Increased z-index of evolution display (iOS issue).

--- a/style.css
+++ b/style.css
@@ -462,7 +462,6 @@ main {
    ======================================= */
 .evolution-display {
     position: absolute;
-    z-index: 5;
     top: -0.9em;
     left: -0.8em;
 
@@ -472,6 +471,7 @@ main {
 
     .basic-stage-img {
         position: absolute;
+        z-index: 3;
         top: -1.7em;
         left: 0.5em;
 
@@ -483,6 +483,7 @@ main {
 
     .evolved-stage-img {
         position: absolute;
+        z-index: 3;
 
         width: 100%;
         height: 100%;
